@@ -1,3 +1,6 @@
+2006-06-21  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadXML.py: handle witness ref properly
+
 2006-06-22  Alex Roitman  <shura@gramps-project.org>
 	* src/Filters/Rules/Person/_RelationshipPathBetweenBookmarks.py:
 	Add new module.
